# edu-vault

./: .gitignore  AGENTS.md  API_Design.md  Capstone Proposal.md  DEVELOPMENT.md  LOGGING.md  PRODUCTION.md  README.md  context.md  docker-compose.dev.yml  docker-compose.yml  embed.md  error.md  justfile  mentor_dashboard_backup.jsx  task.md
.github/workflows/: ci.yml
client/: .env.example  Dockerfile  README.md  admin_dashboard_checklist.md  implementation_plan.md  index.html  lint_output.txt  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css  main.jsx  theme.css
docs/plans/: graphql-integration.md
infra/: .gitignore  QUICKSTART.md  README.md  justfile
infra/ansible/: .gitignore  README.md  ansible.cfg  secrets.yml.example
infra/scripts/: update_ansible_inventory.py
ml/: .env  .env.example  .gitignore  Dockerfile  README.md  config.py  embedding_service.py  logger.py  main.py  pyproject.toml  qdrant_service.py
plans/: admin-features.md  ci-improvements.md
semantic-ranking/: README.md  main.py  pyproject.toml
server/: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  Dockerfile  EduVault.collection.json  EduVault.postman_collection.json  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_PLAN.md  README.md  TESTING_PLAN.md  app.js  debug_env.js  index.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  routes.js  run-migrations.js  test-certs.js
server-ts/: .gitignore  .lazy.lua  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
server-ts/src/: index.ts
(+434 files in other folders)
